fixed clipping issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -7,6 +7,11 @@ body::-webkit-scrollbar {
   
 
 }
+@media only screen and (max-width: 600px) {
+  .homeh1 {
+    margin-top: 1rem;
+  }
+}
 
 .page {
   background-color: grey;
@@ -34,7 +39,12 @@ text-align: center;
 /* end of footer */ 
 /* navbar */ 
 .navbarmaster {
-  position: absolute
+  position: absolute;
+  z-index: 99;
+}
+.navItem {
+  background-color: red;
+  padding: 10px
 }
 
 
@@ -122,7 +132,7 @@ $scale-base-1: (1 + $scale / 100%);
   top: 50%;
   left: 50%;
   transform: translate3d(-50%, -50%, 0);
-  z-index: 99;
+ z-index: 50;
   text-align: center;
   font-family: Raleway, sans-serif;
   font-weight: 300;
